netpol-connectivity-analyzer/environment/manifests/db/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: db
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: db
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
